<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizResult">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AFAFAF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvMessage"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/tvName"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvFinalScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/tvFinalScore"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginTop="80sp"
            android:layout_marginRight="2sp"
            android:text="@string/btnPlayAgain" />

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"
            android:text="@string/btnQuit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>